--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#427444</color>
     <color name="colorPrimaryDark">#4d7428</color>
     <color name="colorAccent">#062312</color>
+    <color name="colorBackground">#627b6f</color>
 </resources>
