--- a/app/src/main/res/layout/maps.xml
+++ b/app/src/main/res/layout/maps.xml
@@ -4,15 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.google.android.gms.maps.MapView
         xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </fragment>
+        android:layout_height="match_parent"/>
 
     <com.joanzapata.iconify.widget.IconButton
         android:id="@+id/my_location_button"
