show qrcode on friend page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,6 @@
         app:ntb_tinted="true"
         app:ntb_title_mode="all"
         app:ntb_titled="true"
-        app:ntb_swiped="true"/>
+        app:ntb_swiped="false"/>
 
 </LinearLayout>
