--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
     <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent" android:layout_height="80dp">
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
         <!-- Bottom View Start-->
         <LinearLayout
             android:id="@+id/bottom_wrapper"
@@ -18,14 +19,27 @@
         <LinearLayout
             android:padding="10dp"
             android:layout_width="match_parent"
+            android:background="@color/colorPrimaryDark"
             android:layout_height="match_parent">
             <!--What you want to show in SurfaceView-->
+            <ImageView
+                android:id="@+id/picture"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="8dp"
+                android:scaleType="centerCrop"
+                android:layout_height="match_parent"
+                android:layout_width="50dp" />
+
             <TextView
-                android:text=""
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:text="Test"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
                 android:id="@+id/name"
-                android:layout_weight="1" />
+                android:gravity="center_vertical"
+                android:layout_weight="0.2"
+                android:textSize="28sp"
+                />
         </LinearLayout>
         <!-- Surface View End -->
     </com.daimajia.swipe.SwipeLayout>
