layout modified and added socket io

--- a/app/src/main/res/layout/maps.xml
+++ b/app/src/main/res/layout/maps.xml
@@ -32,12 +32,13 @@
         android:id="@+id/dragView"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:background="@color/colorBackground"
+        android:background="@drawable/border"
         android:clickable="true"
         android:focusable="false"
         android:orientation="vertical">
 
         <ListView
+            android:padding="10dp"
             android:id="@+id/mapFriendsList"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
