--- a/app/src/main/res/layout/item_map_friend.xml
+++ b/app/src/main/res/layout/item_map_friend.xml
@@ -23,6 +23,7 @@
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:gravity="center_vertical"
+            android:textColor="@color/colorPrimaryDark"
             android:text="Test"
             android:paddingLeft="10dp"
             android:textSize="28sp" />
@@ -31,6 +32,7 @@
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:gravity="center_vertical"
+            android:textColor="@color/colorPrimaryDark"
             android:text="2505 m"
             android:padding="10dp"
             android:textSize="18sp" />
