--- a/app/src/main/res/layout/item_map_friend.xml
+++ b/app/src/main/res/layout/item_map_friend.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="60dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/picture"
-        android:layout_width="80dp"
+        android:layout_width="60dp"
         android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="8dp"
@@ -25,17 +26,15 @@
             android:gravity="center_vertical"
             android:textColor="@color/colorPrimaryDark"
             android:text="Test"
-            android:paddingLeft="10dp"
-            android:textSize="28sp" />
-        <TextView
+            android:textSize="18sp" />
+        <com.joanzapata.iconify.widget.IconTextView
             android:id="@+id/distant"
             android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_height="25dp"
             android:gravity="center_vertical"
             android:textColor="@color/colorPrimaryDark"
-            android:text="2505 m"
-            android:padding="10dp"
-            android:textSize="18sp" />
+            android:text="{fa-map-marker} 2505 m"
+            android:textSize="12sp" />
 
     </LinearLayout>
 </LinearLayout>
